# quant_finance

./: Dockerfile  LICENCE  Makefile  README.md  binom_tree.py  int_rate_curve.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run_docker.sh  setup.py  static_type_check.sh
.github/workflows/: ci-pipeline.yml  ci.yml  ci_pipeline.yml
interest_rates/: int_rate_curve.py  int_rate_models.py  plot_yield_curve.py  short_rate_models.py
option_pricing/: abstract_option.py  american_options.py  bermudan_options.py  binom_tree.py  european_barrier_options.py  european_options.py  options.py  plot_approx_error_european_option.py  plot_price_surface.py
tests/unit_tests/: test_options.py
