[tool.poetry]
name = "quant_finance"
version = "1.0.0"
description = ""
authors = ["Andrea Cassotti"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
